# compass

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.md  build.sh  flash.sh  sdkconfig
main/: CMakeLists.txt  compass_main.cpp  gps.cpp  http.cpp  magneto.cpp  servo.cpp  util.cpp
main/include/: compass.h  gps.h  http.h  magneto.h  servo.h  util.h
static/: index.html
